# cli-toolkit-fastapi

./: README.md  pyproject.toml
cnb_cli/: main.py  requirements.txt
cnb_cli/commands/: deploy.py  docker.py  encrypt.py  pip_guide.py  request.py
cnb_cli/generators/: project.py
cnb_cli/templates/: files.py  project.py
cnb_cli/utils/: encryption.py  fs.py
dev_cli/commands/: __init__.py  api_generator.py  build.py  consumer_generator.py  deploy.py  docker.py  docker_generator.py  encrypt copy.py  encrypt.py  generate.py  init.py  request.py  utils_generator.py
dev_cli/templates/: docker.py
dev_cli/utils/: helper.py
