[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-cli"
version = "1.0.0"
description = "ZACKRY CLI – FastAPI project helper, encryption, Docker, request management"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
authors = [
    { name = "M. Hour Zackry", email = "phokeanghour12@gmail.com" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "cryptography",
    "httpx",
    "typer",
    "rich",
    "gunicorn",
    "playwright",
    "openpyxl",
    "questionary"
]

[project.scripts]
dev = "dev_cli.main:main"
